# ray

./: .gitignore  CMakeLists.txt  README.md  basic_scene.scn  imagedata.h  imagewriter.cpp  job-16-32  job-1a-d  job-1b-d  job-1d  job-1d-d  job-1e-d  job-1g  job-2a  job-2b  job-2b-d  job-2c-d  job-4a  job-8  job-8-d  job-high  job-low  job-mid  job-x1  job-x4  job-x5  memory.h  original_scene.scn  original_scene_tex.scn  parser.cpp  parser.h  random.h  ray.cpp  ray_basic.cpp  scene.h  scene.scn  scenewriter.cpp  spatialpartition.h  string.h  tga.h  (+3 more)
data/: bricks.tga  checkerboard.tga  oldbricks.tga  original_scene.scn  original_scene_tex.scn  original_scene_trans.scn  rand_1024_128.scn  rand_1024_16.scn  rand_1024_32.scn  rand_1024_64.scn  rand_128_128.scn  rand_128_16.scn  rand_128_32.scn  rand_128_64.scn  rand_16384_32.scn  rand_16384_64.scn  rand_16_128.scn  rand_16_16.scn  rand_16_32.scn  rand_16_64.scn  rand_2048_32.scn  rand_2048_64.scn  rand_256_128.scn  rand_256_16.scn  rand_256_32.scn  rand_256_64.scn  rand_32_128.scn  rand_32_16.scn  rand_32_32.scn  rand_32_64.scn  rand_4096_32.scn  rand_4096_64.scn  rand_512_128.scn  rand_512_16.scn  rand_512_32.scn  rand_512_64.scn  rand_64_128.scn  rand_64_16.scn  rand_64_32.scn  rand_64_64.scn  (+6 more)
jobs/: job-16-32-d  job-1a  job-1b  job-1c  job-1c-d  job-1e  job-1f  job-1f-d  job-1g-d  job-1h  job-1h-d  job-2a-d  job-2c  job-2d  job-2d-d  job-4a-d  job-4b  job-4b-d  job-64p  job-64p-d  job-high  job-high-d  job-low  job-low-d  job-mid  job-mid-d  job-sp  job-sp-64p  job-sp-ns  job-sp-x  job-sp-x2  job-sp-x3  job-sp-x4  job-x2  job-x3  job-x3-ns
output/: rand_1024_128.tga  rand_1024_32.tga  rand_1024_64.tga  rand_128_32.tga  rand_2048_64.tga  rand_256_32.tga  rand_4096_64.tga  rand_512_32.tga  rand_render.tga  rand_render_ns.tga  render.tga  render_basic.tga  render_final.tga  render_original.tga  render_original_b4.tga  render_original_nonormals.tga  render_original_p16_b4_tex_diff.tga  render_original_p16_b4_tex_diffuse.tga  render_original_p16_b4_tex_gamma_diffuse.tga  render_original_p16_b4_tex_glossy.tga  render_original_p16_b6_tex_trans.tga  render_original_p16_b6_tex_trans_gamma.tga  render_original_p32_b6_tex_trans_gamma.tga  render_original_p4_b1_tex.tga  render_original_p4_b1_tex_gamma.tga  render_original_p4_b4.tga  render_original_p4_b4_tex.tga  test.tga  (+7 more)
(+14 files in other folders)
